Inclusão da tela de movimentos

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $dark-low: #666 !important;
 $light-low: #999 !important;
 $light-medium: #ddd !important;
 $lighter: #ececec !important;
+$lighter-10: #fafafa !important;
 $light: #fff !important;
 $red: #BB2D3B !important;
 $green: #157347 !important;
@@ -22,6 +23,7 @@ $edit-pentil: #0D6EFD !important;
   --light-low: #{$light-low};
   --light-medium: #{$light-medium};
   --lighter: #{$lighter};
+  --lighter-10: #{$lighter-10};
   --light: #{$light};
   --featured: #{$featured};
   --featured-dark: #{$featured-dark};
