Mascara nos inputs

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,8 +10,8 @@ $light: #fff !important;
 $red: #BB2D3B !important;
 $green: #157347 !important;
 
-$featured: #ff9900 !important;
-$featured-dark: #d68100 !important;
+$featured: #4D61FC !important;
+$featured-dark: #4D61FC !important;
 
 $edit-pentil: #0D6EFD !important;
 
